--- a/package.json
+++ b/package.json
@@ -20,19 +20,23 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.6.1",
     "framer-motion": "^12.9.4",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.507.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-geocode": "^2.0.1",
     "react-hook-form": "^7.56.1",
+    "react-leaflet": "^5.0.0",
     "react-router": "^7.5.3",
     "react-router-dom": "^7.5.3",
+    "recharts": "^2.15.3",
     "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@tailwindcss/vite": "^4.1.5",
+    "@types/leaflet": "^1.9.17",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
